[gd_scene load_steps=2 format=3 uid="uid://bkc6nabwtybq4"]

[ext_resource type="Script" uid="uid://dipatcyl67ona" path="res://UI/GameOverMenu/game_over_menu.gd" id="1_we0kb"]

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_we0kb")

[node name="PanelMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 125
theme_override_constants/margin_top = 90
theme_override_constants/margin_right = 125
theme_override_constants/margin_bottom = 90

[node name="PanelContainer" type="PanelContainer" parent="PanelMargin"]
layout_mode = 2

[node name="ContentMargin" type="MarginContainer" parent="PanelMargin/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelMargin/PanelContainer/ContentMargin"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="PanelMargin/PanelContainer/ContentMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "You Died....... Womp Womp.."
horizontal_alignment = 1

[node name="BetweenLabelAndButtonsMargin" type="MarginContainer" parent="PanelMargin/PanelContainer/ContentMargin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsMargin" type="MarginContainer" parent="PanelMargin/PanelContainer/ContentMargin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="HBoxContainer" type="HBoxContainer" parent="PanelMargin/PanelContainer/ContentMargin/VBoxContainer/ButtonsMargin"]
layout_mode = 2

[node name="Play Again" type="Button" parent="PanelMargin/PanelContainer/ContentMargin/VBoxContainer/ButtonsMargin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play Again
"

[connection signal="pressed" from="PanelMargin/PanelContainer/ContentMargin/VBoxContainer/ButtonsMargin/HBoxContainer/Play Again" to="." method="_on_play_again_pressed"]
